# ORB_SLAM-PythonBindings

./: .gitignore  .gitmodules  CMakeLists.txt  MANIFEST.in  README.md  pyproject.toml  setup.py  yhu_test.md
.github/scripts/: install_build_deps.sh  install_sys_deps.sh
.github/workflows/: build_publish.yml
cmake_modules/: FindNumPy.cmake
examples/: orbslam_mono_euroc.py  orbslam_mono_kitti.py  orbslam_stereo_euroc.py  orbslam_stereo_kitti.py
src/: ORBSlamPython.cpp  ORBSlamPython.h  ORBSlamPythonEnhanced.cpp  ORBSlamPythonEnhanced.h
src/orbslam3/: _version.py
src/pyboostcvconverter/: pyboost_cv3_converter.cpp
tests/src/: TestORBSlamPython.cpp
