[build-system]
requires = ["setuptools>=42", "wheel", "scikit-build>=0.17", "cmake>=3.18", "numpy"]
build-backend = "setuptools.build_meta"

# PEP 621 Project metadata
[project]
name = "orbslam3-python"
version = "1.0.0"
description = "Python bindings for the ORB-SLAM3 visual SLAM library"
maintainers = [{ name = "Alex S.", email = "savaalexandru562@gmail.com" }]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    'Intended Audience :: Developers',
    'Intended Audience :: Science/Research',
    'License :: OSI Approved :: GNU General Public License v3 (GPLv3)',
    'Programming Language :: C++',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3 :: Only',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Operating System :: POSIX :: Linux',
    'Topic :: Scientific/Engineering :: Image Processing',
    'Topic :: Scientific/Engineering :: Artificial Intelligence',
    'Topic :: Software Development :: Libraries :: Python Modules',
]

# These are the RUNTIME dependencies
dependencies = ["numpy>=1.21.0", "opencv-python>=4.5.0"]

[project.optional-dependencies]
test = ["pytest>=6.0"]
dev = ["pytest>=6.0", "build", "twine"]

# Update these URLs to your actual repository
[project.urls]
"Bug Tracker" = "https://github.com/AlexandruRO45/ORB_SLAM-PythonBindings/issues"
"Source" = "https://github.com/AlexandruRO45/ORB_SLAM-PythonBindings/"
"Documentation" = "https://github.com/AlexandruRO45/ORB_SLAM-PythonBindings/"